# ux-sake-broker-esp-code

./: .gitignore  ChatBot.jsx  alco.py  chat_test.js  co.js  dht22.py  faqData.json  level.js  monitor.py  package-lock.json  package.json  rx.py  scratch_3.py  threshold.py  tx.py
broker-localhost-vs/MQTT Server - online/: .env  Dockerfile  README.MD  brokerSE.js  docker-compose.yml  package-lock.json  package.json
esp32Final - v2 - Copy - Copy -minimalFinal/minimalfinal/main/: app_main.c  dht22_handler.c  factory_reset.c  mq135_handler.c  mqtt_client_config.c  mqtt_client_config.h  ultrasonic_handler.c
esp32Final - v2 - Copy - Copy/final/: CMakeLists.txt
esp32Final - v2 - Copy - Copy/final/arduino/ESP3MQTT/: ESP3MQTT.ino
esp32Final - v2 - Copy - Copy/final/arduino/ESP5IDF/main/: CMakeLists.txt  config.h  factory_reset.h  led_config.c  wifi_manager.c
esp32Final - v2 - Copy - Copy/final/main/: app_main.c  config.h  ds18b20_handler.c  led_config.c  mqtt_client_config.h  wifi_manager.c  wifi_manager.h
esp32Final - v2 - Copy/final/arduino/: New Text Document.txt
esp32Final - v2 - Copy/final/main/: CMakeLists.txt  app_main.c  factory_reset.h  led_config.h  mqtt_client_config.c
esp32Final - v2/final/main/: app_main.c  ultrasonic_handler.h
esp32Final/final/: sdkconfig
esp32Final/final/main/: app_main.c  config.h  dht22_handler.h  mq135_handler.h  mqtt_client_config.c  wifi_manager.c  wifi_manager.h
fritzing/: DHT22 Humidity and Temperature Sensor.fzpz  MQ-135 Gas Sensor Breakout Board.fzpz  arduino-pluggable-terminal.fzpz  ckt_bom.html  dht22-esp8266-arduino.fzz  message.txt
fritzing/circuit/: ckt.fzz  ckt_bom_csv.csv  pcb1.fzz  pcb2.fzz
multithread-online - updated/: CMakeLists.txt
multithread-online - updated/arduino/sketch_dec18a/: sketch_dec18a.ino
multithread-online - updated/arduino/waterPumpSketch/: waterPumpSketch.ino
multithread-online - updated/main/: app_main.c  config.h  ds18b20_handler.h  motor_controller.c  motor_controller.h  mqtt_client_config.c
multithread-online/main/: CMakeLists.txt  app_main.c  mqtt_client_config.c
multithread-secured-xtra-wifi-remote/: README.md
multithread-secured-xtra-wifi-remote/main/: app_main.c  config.h  mqtt_client_config.c  mqtt_client_config.h  wifi_manager.c
(+29 files in other folders)
